fix layout css on mobile devices

--- a/src/app/books/book-filter-bar/book-filter-bar.component.css
+++ b/src/app/books/book-filter-bar/book-filter-bar.component.css
@@ -2,8 +2,21 @@
   margin: 10px 0 30px 0;
 }
 
+.or {
+  text-align: center;
+  color: var(--main-bg-color);
+  font-weight: bold;
+  margin: 40px auto 30px;
+  width: 50px;
+  height: 50px;
+  font-size: 20px;
+  background-color: var(--primary-color);
+  line-height: 50px;
+  border-radius: 50%;
+}
+
 .form-control {
-  width: 220px;
+  width: 210px;
   display: inline-block;
   box-sizing: border-box;
   margin: 0 15px;
@@ -14,3 +27,31 @@
   font-size: 10px;
   bottom: -22px;
 }
+
+
+@media only screen and (max-width: 768px) {
+  .form-control {
+    width: 100%;
+    margin:10px 0;
+    display: block;
+  }
+}
+
+@media only screen and (min-width: 1025 ) {
+  .form-control {
+    width: 247px;
+  }
+}
+
+@media only screen and (max-width: 1023px) {
+
+  .form-control--select-genre  {
+    margin-right: 0;
+  }
+  .form-control--input-text {
+    width: 100%;
+    margin:10px 0;
+  }
+}
+
+
